<resources>
    <string name="app_name">base</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="password_error">Password cannot be empty</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="connect_time_out">连接超时！请检查您的网络设置</string>
    <string name="gson_error">服务器返回JSON格式错误</string>
    <string name="error_signin_auth_error">授权过期，请重新登录</string>
    <string name="home_scan">扫一扫</string>
    <string name="home_search_hint">搜索商品/店铺</string>
    <string name="home_news">消息</string>
    <string name="more">更多</string>
    <string name="is_use_theme">是否应用主题</string>
    <string name="download_link_empty">下载链接为空</string>
    <string name="is_download_theme">是否下载主题</string>
    <string name="download_theme">下载主题</string>
    <string name="pend_get_theme">获取数据</string>
    <string name="pend_download">下载中...</string>
    <string name="get_theme_failure">主题获取失败</string>
    <string name="download_now">立即下载</string>
    <string name="download_failure">下载失败</string>
    <string name="press_and_exit">再按一次退出</string>
    <string name="store">商城</string>
    <string name="jump">跳转</string>
    <string name="home_scan_failure">扫描失败</string>
    <string name="home_scan_failure_recognize">照片中的图像未识别到二维码</string>
    <string name="home_scan_again">未能识别二维码内容，请重新扫描</string>
    <string name="category">分类</string>
    <string name="search_Goods">搜索商品</string>
    <string name="lastest_searches">最近搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="no_classification">暂无任何分类</string>
    <string name="product_category">商品分类</string>
    <string name="shoping_cart">购物车</string>
    <string name="shoping_has_been_added">已加入购物车</string>
    <string name="shoping_adding">加入购物车...</string>
    <string name="a_total_of_three">合计:</string>
    <string name="settlement">结算</string>
    <string name="the_goods_cant_minus">受不了了，宝贝不能再少了</string>
    <string name="stock_error">库存不足</string>
    <string name="please_input_right_product_num">请输入正确商品数量</string>
    <string name="is_delete_all_product">是否要删除全部商品</string>
    <string name="shop_cart_no_goods">您的购物车还是空的</string>
    <string name="go_shopping">随便逛逛</string>
    <string name="shopping_again">再去逛逛</string>
    <string name="login_can_check_cart">登录后即可查看购物车中的商品</string>
    <string name="to_login">去登录</string>
    <string name="modify_buy_count">修改购买数量</string>
    <string name="delete_product">是否要删除此商品</string>
    <string name="delete_shop">是否要删除此店铺</string>
    <string name="delete_all">清空</string>
    <string name="confirm_delete">确认删除</string>
    <string name="place_select_product">请选择商品</string>
    <string name="home">个人中心</string>
    <string name="my_order">我的订单</string>
    <string name="check_all_order">查看全部订单</string>
    <string name="my_information">我的信息</string>
    <string name="address_manager">管理收货地址</string>
    <string name="my_address_manager">管理自己的家</string>
    <string name="order">订单</string>
    <string name="total">(共计</string>
    <string name="a_unit_product">件商品)</string>
    <string name="account_sales">销量</string>
    <string name="account_review">好评</string>
    <string name="to_be_paid">待付款</string>
    <string name="to_shipped">待收货</string>
    <string name="to_send">待发货</string>
    <string name="to_evaluated">待评价</string>
    <string name="plase_signIn">登录/注册</string>
    <string name="plase_nick">昵称</string>
    <string name="select_other_goods">改选其他商品</string>
    <string name="select_other_shipping">改选其它配送方式</string>
    <string name="select_other_seller">改选其他卖家</string>
    <string name="other_causes">其他原因</string>
    <string name="sure_order">确认订单</string>
    <string name="no_shipping_free">免运费</string>
    <string name="nothing">无</string>
    <string name="zero_order">"0"</string>
    <string name="zero_order_o">"0.00"</string>
    <string name="short_of_score">积分不足</string>
    <string name="short_of_score_tips">无可用积分</string>
    <string name="please_input_address">请填写收货地址</string>
    <string name="score_all">共</string>
    <string name="score_max">最多可用</string>
    <string name="score_rule">积分(1积分可抵</string>
    <string name="avalibale_bonus">个红包可用</string>
    <string name="bonus_value">元红包</string>
    <string name="RMB_unit">元</string>
    <string name="bonus">红包</string>
    <string name="address">地址</string>
    <string name="orders_detail">订单详情</string>
    <string name="waiting_for_the_buyer_payment">等待买家付款</string>
    <string name="waiting_for_buyers_to_delivery">等待卖家发货</string>
    <string name="waiting_for_the_goods_two">等待买家收货</string>
    <string name="sure_for_the_goods">确认收货</string>
    <string name="sure_for_the_goods_or_not">确认收货？</string>
    <string name="view_logistics">查看物流</string>
    <string name="buy_success">购买成功</string>
    <string name="the_deal">交易成功</string>
    <string name="the_deal_cancel">交易关闭</string>
    <string name="order_num">订单编号：</string>
    <string name="courier_number">快递单号：</string>
    <string name="create_time">创建时间：</string>
    <string name="pay_time">付款时间：</string>
    <string name="delivery_time">发货时间：</string>
    <string name="order_success_time">成交时间：</string>
    <string name="order_cancel_time">取消时间：</string>
    <string name="close_time">关闭时间：</string>
    <string name="total_order">订单总额</string>
    <string name="total_goods">商品总额</string>
    <string name="shipping_price">运费金额</string>
    <string name="discount_price">折扣价</string>
    <string name="submit_order">提交订单</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay">付款</string>
    <string name="cancel_payment">取消付款</string>
    <string name="the_deal_seller_will_receive_payment">交易成功，卖家将收到您的货款！</string>
    <string name="freight_cost">含运费</string>
    <string name="distribution_cost">配送费用:</string>
    <string name="no_orders">您还没有相关订单</string>
    <string name="order_no_address">您还没有收货地址，点击这里添加。</string>
    <string name="order_error">订单信息错误</string>
    <string name="order_submit_success">订单提交成功，请您尽快付款。</string>
    <string name="freight">运费</string>
    <string name="order_total_price">订单总价</string>
    <string name="go_to_shopping">去看看有没有喜欢的，快去购买吧！</string>
    <string name="order_shipping_title">配送方式</string>
    <string name="order_shipping_type">请选择配送方式</string>
    <string name="order_invoice_title">发票内容</string>
    <string name="order_invoice_type">请选择发票内容</string>
    <string name="order_invoice_no">不要发票</string>
    <string name="order_bunus_title">使用红包</string>
    <string name="order_bunus_type">请选择使用红包</string>
    <string name="order_score_hint">在此输入积分</string>
    <string name="order_message_comment">买家留言：</string>
    <string name="order_message_hint">在此输入留言</string>
    <string name="order_score_cash">积分抵现</string>
    <string name="order_discount_money">优惠金额</string>
    <string name="order_goods_discount">商品折扣</string>
    <string name="order_shop_bonus">商家红包</string>
    <string name="order_shop_coupon">商家优惠</string>
    <string name="order_goods_reduction">商品减免</string>
    <string name="order_reduction">订单减免</string>
    <string name="order_coupon_reduction">优惠券减免</string>
    <string name="order_have_cashgift">已优惠：</string>
    <string name="current_available_integration">当前可用积分</string>
    <string name="return_soure">返回积分</string>
    <string name="tiny_amount">点</string>
    <string name="shopping_return_soure">购物返积分</string>
    <string name="get_soure">收入</string>
    <string name="consume_soure">支出</string>
    <string name="logistics_status">物流状态</string>
    <string name="logistics_information_sources">信息来源</string>
    <string name="logistics_order_sn">运单编号</string>
    <string name="change_password">修改密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_old_password_length">请输入6-20个字符的旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="please_input_new_password_leagth">请输入6-20个字符的密码</string>
    <string name="please_input_sure_password">请输入确认密码</string>
    <string name="please_input_sure_password_length">请输入7-14个字符的确认密码</string>
    <string name="password_no_consistent">两次密码输入不一致</string>
    <string name="changing_password">修改密码中...</string>
    <string name="password_change_success">账号密码修改成功</string>
    <string name="find_password">密码找回</string>
    <string name="find_by_phone">手机找回</string>
    <string name="find_by_mail">邮箱找回</string>
    <string name="quick_register">快速注册</string>
    <string name="email_register">邮箱注册</string>
    <string name="pending_login">登录中...</string>
    <string name="register_success">注册成功</string>
    <string name="input_username_byrule">请输入3-25个字符的用户名</string>
    <string name="user_protocol">用户协议</string>
    <string name="input_username">请输入用户名</string>
    <string name="pending_save_userInfo">保存用户资料中...</string>
    <string name="input_password_byrule">请输入6-20个字符的密码</string>
    <string name="input_number_alphabet">用户名中只包含数字和英文字母</string>
    <string name="diff_password">密码输入不一致</string>
    <string name="password_format">密码是6-20位的数字/字母/符号</string>
    <string name="username_format">请输入3-25位，可以包含英文与数字</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_correct_phone">请输入正确的手机号</string>
    <string name="input_captcha">请输入验证码</string>
    <string name="input_captcha_by_rule">请输入6位验证码</string>
    <string name="pending_get_code">获取中...</string>
    <string name="sended">已发送</string>
    <string name="send_again">重新发送</string>
    <string name="from_the_album_to_choose">从相册选择</string>
    <string name="modify_self_information_succees">修改个人资料成功</string>
    <string name="confirm_submit">确认提交</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secrecy">保密</string>
    <string name="about_us">关于我们</string>
    <string name="current_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="sure_new_password">确认新密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username_email_mobile">用户名/邮箱/手机号</string>
    <string name="username_email">用户名/邮箱</string>
    <string name="forget_password_ques">忘记密码?</string>
    <string name="username">用户名</string>
    <string name="username_hint">用户名为3-25位，可以包含英文与数字</string>
    <string name="set_password">设置密码</string>
    <string name="sure_password">确认密码</string>
    <string name="email_address">邮箱地址</string>
    <string name="email_hint">请输入邮箱地址</string>
    <string name="send_link_to_email">我们将发送密码修改链接到您绑定的邮箱</string>
    <string name="please_input_password_no_null">请输入密码</string>
    <string name="please_input_login">请输入</string>
    <string name="please_input_correct_email">邮箱地址不正确</string>
    <string name="login_success">登录成功</string>
    <string name="personal_profile">个人资料</string>
    <string name="find_password_succeed">您的密码已通过手机找回的方式修改成功</string>
    <string name="find_password_email_address">密码修改链接已发送至</string>
    <string name="password_rule">6-20位数字/字母/符号</string>
    <string name="click_and_agree">点击注册表示同意</string>
    <string name="input_phone_code">请输入手机验证码</string>
    <string name="get_phone_code">获取验证码</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="input_nickname_byrule">请输入3-25个文字作为昵称</string>
    <string name="RMB_one">¥</string>
    <string name="operation_management">运营管理</string>
    <string name="operation_analysis">运营分析</string>
    <string name="chenck_operation_analysis">实时查看运营分析数据</string>
    <string name="stock">库存</string>
    <string name="check_stock_taking">轻松盘点您的库存信息</string>
    <string name="stock_check">库存查询</string>
    <string name="goto_stock_check">方便快捷地查询库存信息</string>
    <string name="please_input_strore_name">请输入商户名称</string>
    <string name="please_input_num">请输入编号</string>
    <string name="save_passwd">保存密码</string>
</resources>