<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/user_top_view_bg"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/navgation_color"
        >

        <ImageView
            android:id="@+id/user_top_view_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="5dp"
            android:padding="10dp"
            android:src="@mipmap/icon_message"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/user_top_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="65dp"
            android:singleLine="true"
            android:text="@string/operation_management"
            android:textColor="@color/black_text_color"
            android:textSize="17dp" />


    </FrameLayout>

    <View
        android:id="@+id/divider"
        style="@style/divider_line_horizontal" />


    <LinearLayout
        android:id="@+id/goto_operation"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/icon_analysis" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation_analysis"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="13dp"
                android:text="@string/chenck_operation_analysis"
                android:textColor="#8A9199"
                android:textSize="14dp" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/goto_stock_check"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/icon_stock_take" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textColor="@color/text_color"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:gravity="right"
                android:text="@string/check_stock_taking"
                android:textColor="#8A9199"
                android:textSize="14dp" />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/goto_stock_query"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:visibility="gone"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/icon_stock_search" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock_check"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/goto_stock_check"
                android:textColor="#8A9199"
                android:textSize="14dp" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>