<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="163dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:src="@mipmap/logo_1haomei_login"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_tabbar_home" />

            <com.yhm.wst.view.ClearEditText
                android:id="@+id/cetName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_input_strore_name"
                android:inputType="text"
                android:padding="10dp"
                android:layout_marginLeft="2dp"
                android:singleLine="true"
                android:textColorHint="@color/gray_text_color"
                android:textColor="@color/black_text_color"
                android:textSize="14sp" />

        </LinearLayout>


        <View
            style="@style/divider_line_horizontal" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_tabbar_me" />

            <com.yhm.wst.view.ClearEditText
                android:id="@+id/cetNo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_input_num"
                android:inputType="text"
                android:padding="10dp"
                android:textColorHint="@color/gray_text_color"
                android:layout_marginLeft="2dp"
                android:singleLine="true"
                android:textColor="@color/black_text_color"
                android:textSize="14sp" />
        </LinearLayout>
        <View
            style="@style/divider_line_horizontal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/icon_passwd" />

            <com.yhm.wst.view.ClearEditText
                android:id="@+id/cetPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_input_password_no_null"
                android:maxLength="20"
                android:padding="10dp"
                android:textColorHint="@color/gray_text_color"
                android:password="true"
                android:singleLine="true"
                android:textColor="@color/black_text_color"
                android:layout_marginLeft="2dp"
                android:textSize="14sp" />
        </LinearLayout>
        <View
            style="@style/divider_line_horizontal" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="18dp"
            android:paddingTop="12dp">
            <ImageView
                android:id="@+id/ivSave"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/icon_checkbox_login_nor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_passwd"
                style="@style/normalText"
                android:layout_marginLeft="15dp"/>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/rect_round"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

</LinearLayout>