<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_title_height"
        android:background="@color/base_title_bar_bg">

        <TextView
            android:id="@+id/tvTitleText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="购物车"
            android:textColor="@color/text_color"
            android:textSize="@dimen/ts_title_bar_34" />

        <TextView
            android:layout_width="wrap_content"
            android:text="清空"
            android:layout_alignParentRight="true"
            style="@style/normalText"
            android:gravity="center"
            android:padding="10dp"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <com.yhm.wst.view.PtrDefaultFrameLayout
        android:id="@+id/ptrFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.yhm.wst.view.PtrDefaultFrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivSelectAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/btn_cart_all_select" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/a_total_of_three"
                    android:textColor="@color/text_light_color"
                    android:textSize="14dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1.5dp"
                    android:text="@string/RMB_one"
                    android:textColor="@color/text_color"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0.00"
                    android:textColor="@color/text_color"
                    android:textSize="18dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/text_light_color"
                android:textSize="12dp"
                tools:text="15" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSettlement"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:background="@color/primary_color"
            android:gravity="center"
            android:text="@string/settlement"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>